syntax = "proto3";

package uploaderpb;
option go_package = "./repository/uploaderpb";

message ChunkRequest {
  int64 id = 1;
  string data = 2;
  float size = 3;
  string sha256 = 4;
}

message ChunkResponse {
  bool status = 1;
}

service ChunkService {

  rpc ChunkUpload (ChunkRequest) returns (ChunkResponse) {};
}
